--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-  <p>Created By Andrew Mead - Copyright {{getCurrentYear}}</p>
+  <p>Created By Baptiste Doucerain - Copyright {{getCurrentYear}}</p>
 </footer>
